Cherry-pick c9af451c45dd. rdar://171634786

Border collapse problem with rowspan/colspan cells
    https://bugs.webkit.org/show_bug.cgi?id=5515
    rdar://94163960

    Reviewed by Alan Baradlay.

    Currently for a table of 2 columns and 4 rows.
    * the first column has a rowspan = 3
      (so 2 cells with one covering the first 3 rows)
    * the second column has 4 cells on 4 rows
    When specifiying a different bottom border color for each first 3 rows,
    WebKit is adopting the color of the first cell defined in the second
    colum for the bottom color of the rowspanned cell instead of the color
    of the third row like Gecko and Blink do.

    This patch is fixing and only this. It doesn't fix the more general
    issue for vertical border shared in between the rowspanned cell and the
    second column cells.
    This will need to be fixed in https://webkit.org/b/20260 as it requires
    a larger architectural change on border segmenting.

    This didn't have WPT tests before, this is adding one covering this
    behavior.

    Tests: imported/w3c/web-platform-tests/css/css-tables/rowspan-cell-border-after-color-ref.html
           imported/w3c/web-platform-tests/css/css-tables/rowspan-cell-border-after-color.html

    * LayoutTests/imported/w3c/web-platform-tests/css/css-tables/rowspan-cell-border-after-color-expected.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-tables/rowspan-cell-border-after-color-ref.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-tables/rowspan-cell-border-after-color.html: Added.
    * Source/WebCore/rendering/RenderTableCell.cpp:
    (WebCore::RenderTableCell::computeCollapsedAfterBorder const):

    Canonical link: https://commits.webkit.org/306471@main

Identifier: 305413.392@safari-7624-branch