Source/WebCore/rendering/RenderTableCell.cpp
@@ -4,7 +4,7 @@
  *           (C) 1998 Waldo Bastian (bastian@kde.org)
  *           (C) 1999 Lars Knoll (knoll@kde.org)
  *           (C) 1999 Antti Koivisto (koivisto@kde.org)
- * Copyright (C) 2003-2025 Apple Inc. All rights reserved.
+ * Copyright (C) 2003-2026 Apple Inc. All rights reserved.
  * Copyright (C) 2016-2017 Google Inc. All rights reserved.
  * Copyright (C) 2025 Samuel Weinig <sam@webkit.org>
  *
@@ -1107,10 +1107,15 @@ CollapsedBorderValue RenderTableCell::computeCollapsedAfterBorder(IncludeBorderC
             return result;
     }
     
-    // (3) Our row's after border. (FIXME: Deal with rowspan!)
-    result = chooseBorder(result, CollapsedBorderValue(parent()->style().borderAfter(), includeColor ? resolvedBorderColor(parent()->style(), afterColorProperty) : Color(), BorderPrecedence::Row, parent()->style().usedZoomForLength()));
-    if (!result.exists())
-        return result;
+    // (3) Our row's after border. Account for rowspan by using the last row in the span.
+    // For a cell spanning multiple rows, the after border should match with the border
+    // of the last row in the span, not the first row.
+    size_t lastRowIndex = rowIndex() + rowSpan() - 1;
+    if (CheckedPtr lastRowInSpan = section()->rowRendererAt(lastRowIndex)) {
+        result = chooseBorder(result, CollapsedBorderValue(lastRowInSpan->style().borderAfter(), includeColor ? resolvedBorderColor(lastRowInSpan->style(), afterColorProperty) : Color(), BorderPrecedence::Row, lastRowInSpan->style().usedZoomForLength()));
+        if (!result.exists())
+            return result;
+    }
     
     // (4) The next row's before border.
     if (nextCell) {
